--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ p {
 }
 
 #hero {
-  background: url("/image/1641650179908.jpeg") no-repeat center center/cover;
+  background: url("../image/1641650179908.jpeg") no-repeat center center/cover;
   height: 600px;
 }
 #hero .hero-content {
@@ -79,9 +79,9 @@ p {
   text-align: center;
   padding-top: 170px;
 }
-#hero .hero-content h1 { 
-font-size: 60px;
-line-height: 1.2cm;
+#hero .hero-content h1 {
+  font-size: 60px;
+  line-height: 1.2cm;
 }
 .primary-text {
   color: #f0f0cb;
@@ -119,7 +119,6 @@ line-height: 1.2cm;
   margin-bottom: 10px;
 }
 
-
 #about .content-1,
 #about .content-2,
 #about .content-3 {
@@ -137,53 +136,53 @@ line-height: 1.2cm;
 }
 /* section testimonials */
 #testimonials {
-    background: url("/image/Section_Image_2.jpeg") no-repeat center center/cover;
-    height: 600px;
-    overflow: hidden;
+  background: url("../image/Section_Image_2.jpeg") no-repeat center center/cover;
+  height: 600px;
+  overflow: hidden;
 }
 
 /* chaning the font color the heading and adjusting some spaces from the top edge */
 #testimonials .lead-head {
-    color: #fff;
-    padding-top: 20px;
-    margin-bottom: 20px;
+  color: #fff;
+  padding-top: 20px;
+  margin-bottom: 20px;
 }
 
 #testimonials .testimonial img {
-    height: 100px;
-    width: 90px;
-    float: left;
-    margin-right: 20px;
-    border-radius: 50%;
+  height: 100px;
+  width: 90px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
 }
 
 /* adding a color overlay on the background of the about section */
 .row {
-    background: rgba(39, 62, 84, 0.4);
-    overflow: hidden;
-    height: 600px;
-    z-index: 2;
+  background: rgba(39, 62, 84, 0.4);
+  overflow: hidden;
+  height: 600px;
+  z-index: 2;
 }
 .bg-primary {
-    background: rgba(255, 255, 255, 0.4)
+  background: rgba(255, 255, 255, 0.4);
 }
 
 /* adjusting the testimonials containers */
 #testimonials .testimonial {
-    padding: 20px;
-    width: 50%;
-    margin-bottom: 40px;
-    border-radius: 1.2em;
+  padding: 20px;
+  width: 50%;
+  margin-bottom: 40px;
+  border-radius: 1.2em;
 }
 
 /* footer */
 footer {
-    background: #082032;
-    height: 70px;
-    overflow: auto;
+  background: #082032;
+  height: 70px;
+  overflow: auto;
 }
 
 .container1 {
-    color: #fff;
-    text-align: center;
+  color: #fff;
+  text-align: center;
 }
